--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<!--=========================-!>
-Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (DM IG untuk order)
-+ Youtube: Deka Tutorial
-+ Tiktok: @deka_tutorial
-+ Instagram: deka_tutorial
-<-===========================-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,17 +9,20 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   </head>
   <body>
     <div class="open">
-      <i>❤️</i>
-      <span>Klik love nya</span>
+      <i>🤍</i>
+      <span>click love nya</span>
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
-      nomorWhatsapp = ``;
+      ucapan = `haii sayang
+      ini coding for you Laura🤍
+      Loving you is my favorite adventure🤍`;
+      flower = `flower.mp3`;
+      nomorWhatsapp = `6287881928428`;
       idTelegram = ``;
 
-      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
+      RafiFirmansyah (ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
+
